--- a/style.css
+++ b/style.css
@@ -9,12 +9,26 @@ html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+#display {
+  position: relative;
+  text-align: center;
+  margin: 50px auto 0 auto;
+  height: 30px;
+  width: 200px;
+  font-size: 2rem;
+  background: white;
+  opacity: 0.5;
 }
 
 .keys {
-  display: flex;
-  flex: 1;
-  min-height: 100vh;
+  display: grid;
+  grid: 1fr 1fr 1fr / 1fr 1fr 1fr;
+  height: 90vh;
+  width: 100vw;
   align-items: center;
   justify-content: center;
 }
@@ -22,7 +36,7 @@ html {
 .key {
   border: 0.4rem solid black;
   border-radius: 0.5rem;
-  margin: 1rem;
+  margin: 0 auto;
   font-size: 1.5rem;
   padding: 1rem 0.5rem;
   transition: all 0.07s ease;
